[package]
name = "rui_lopez"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { path = "../rust-sdl2/", default-features = false, features = ["bundled", "ttf"] }
mopa = "0.2.2"
once_cell = "1.9.0"
glyph_brush = "0.7.3"

[features]
bundled = ["sdl2/bundled"]
ttf = ["sdl2/ttf"]
